# DigitalTibetan

./: .buildinfo  .gitignore  CNAME  README.html  README.md  TibTest.odt  TibTest.sla  _config.yml  _toc.yml  api.php  calc.ipynb  chapter1test.md  genindex.html  index.html  main.html  main.md  nagarjuna.odt  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: Publish.yml
Images/: favicon.xcf
_build/html/: .buildinfo  (+8 more)
_sources/: README.md  main.md
_static/: mod.css
docs/: Prepare your device for Tibetan script.md  Subtopic.md  Tibetan_ocr.html  Tibetan_ocr.md  apps_android.html  apps_android.md  apps_ios.html  apps_ios.md  computational_dharma.html  computational_dharma.ipynb  computers_applications_libreoffice.html  computers_applications_libreoffice.md  computers_linux_gnome.html  computers_linux_gnome.md  computers_linux_kde.html  computers_linux_kde.md  computers_macos.html  computers_macos.md  computers_tibetan.html  computers_tibetan.md  computers_windows.html  computers_windows.md  computers_windows_keyboards.html  computers_windows_keyboards.md  computers_windows_xp.html  computers_windows_xp.md  configuration_android.html  configuration_android.md  configuration_ios.html  configuration_ios.md  devices_tibetan.html  devices_tibetan.md  dictionaries.html  dictionaries.md  digital_dharma_is_fragile.html  digital_dharma_is_fragile.md  digital_tibetan_tools.html  digital_tibetan_tools.md  digital_tibetan_tools_calendar.html  digital_tibetan_tools_calendar.md  (+45 more)
resources/: TibTest.odt  TibTest.sla  TibetanFonts.odt
(+67 files in other folders)
