[project]
name = "digitaltibetan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "indic-transliteration>=2.3.75",
    "jupyter-book<=1.0.4",
    "pandas>=2.3.3",
    "pyewts>=0.2.0",
    "sphinxcontrib-mermaid>=1.2.3",
]
